Fixed a problem with the method AttributeAffectsStyle: it was erroneously ignoring the fact that HTML attributes can affect style even if there are no CSS rules with thos attributes in the selectors. Changed to restrict the selector evaluation to XML elements. r=shaver, a=karnaze, b=39642